@@ -128,6 +128,7 @@ typedef enum {
   ACTID_SUBSELECT,
   ACTID_SV_SYNC_p,
   ACTID_SV_SYNC_m,
+  ACTID_SV_SYNC_RESET,
   ACTID_HUECONTROLp,
   ACTID_HUECONTROLm,
   ACTID_SATURATIONCONTROLp,
